@@ -122,6 +122,7 @@ XS/Cursor.xs
 XS/DC.xs
 XS/Dialog.xs
 XS/DirDialog.xs
+XS/EditableListBox.xsp
 XS/EvtHandler.xs
 XS/FileDialog.xs
 XS/FilePickerCtrl.xsp
